--- a/package.json
+++ b/package.json
@@ -32,10 +32,13 @@
   "homepage": "https://github.com/KarolyRobert/couchdb-designer#readme",
   "devDependencies": {
     "@babel/cli": "^7.15.4",
-    "@babel/core": "^7.15.5",
     "@babel/node": "^7.15.4",
-    "@babel/preset-env": "^7.15.6",
     "babel-jest": "^27.2.4",
     "jest": "^27.2.4"
+  },
+  "dependencies": {
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/standalone": "^7.18.12"
   }
 }
